# blc

./: README.md  blc.cabal  blc.hs
examples/: reverse.lc
src/Language/BLC/: Compile.hs  Core.hs  Encoding.hs  Parse.hs  Translate.hs
test/: Tests.hs
tests/: Arbitrary.hs  Infinite.hs  Tests.hs
