name:                blc
version:             0.1.0
synopsis:            Binary Lambda Calculus
description:         A parser and interpreter for binary lambda calculus.
license:             BSD3
license-file:        LICENSE
author:              Kyle Raftogianis <kylerafto@gmail.com>
maintainer:          Kyle Raftogianis <kylerafto@gmail.com>
copyright:           (c) 2013 Kyle Raftogianis
category:            Language
build-type:          Simple
cabal-version:       >= 1.8

extra-source-files:
  .gitignore
  README.md

source-repository head
  type: git
  location: git://github.com/knrafto/blc.git

library
  build-depends:
    base            >= 4.6   && < 5,
    bound                       < 1,
    mtl             >= 2.0.1 && < 2.2,
    parsec          >= 3     && < 4,
    prelude-extras  >= 0.3   && < 1,
    transformers    >= 0.2   && < 0.4

  exposed-modules:
    Language.BLC.Core
    Language.BLC.Parse
    Language.BLC.Translate

  hs-source-dirs: src
  ghc-options: -Wall

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs: tests
  ghc-options: -Wall -threaded

  build-depends:
    base,
    blc,
    bound,
    QuickCheck       >= 2.4,
    tasty            >= 0.3,
    tasty-quickcheck >= 0.3

  other-modules:
    Arbitrary
    Infinite
